# simpleT5_TRL

./: .gitignore  README.md  examples.md  pyproject.toml  requirements.txt  setup.py
examples/: testing_notebook.ipynb
examples/data/: dpo_train.csv  dpo_val.csv  rft_train.csv  rft_val.csv  sft_train.csv  sft_val.csv  simpo_train.csv  simpo_val.csv
simplet5_trl/: simplet5_trl.py
src/simplet5_trl/: __init__.py  simplet5_trl.py
